fix: overflow on icons

--- a/nerdlets/shared/components/components.scss
+++ b/nerdlets/shared/components/components.scss
@@ -29,6 +29,7 @@
 }
 
 .cohort {
+  overflow: visible;
   display: flex;
   flex-direction: column;
   min-width: 335px;
